--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
   </head>
   <body>
     <h1 class="col-12 offset-0 col-md-8 offset-md-2">PREFERENCE PICK-TURE</h1>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <img class="col-2 offset-md-1"src="assets/img/eye.png" alt="eye" style="width:160px;height:160px;">
+    <img class="col-2 offset-md-1"src="assets/img/nose.png" alt="nose" style="width:160px;height:160px;margin-left:50pxs">
+    <img class="col-2 offset-md-1"src="assets/img/ear.png" alt="ear" style="width:160px;height:160px;margin-left:50pxs">
+    <img class="col-2 offset-md-1"src="assets/img/lips.png" alt="lips" style="width:160px;height:160px;margin-left:50pxs">
+    <img class="col-2 offset-md-1"src="assets/img/touch.png" alt="touch" style="width:160px;height:160px;margin-left:50pxs">
+    
+	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
   </body>
 </html>
